--- a/CN/CN_anime.html
+++ b/CN/CN_anime.html
@@ -378,7 +378,7 @@
             </li>
             <li class="animeli">
                 <div><img class="animeimg"
-                        src="../img/kjys.webp"
+                        src="../img/kjys.png"
                         alt="《铠甲勇士》">
                 </div>
                 <div class="animetitle"><a href="https://www.iqiyi.com/v_19rrhnwuo0.html" target="_blank"
@@ -495,7 +495,7 @@
             </li>
             <li class="animeli">
                 <div><img class="animeimg"
-                        src="../img/msdmx.webp"
+                        src="../img/msdmx.png"
                         alt="《美食大冒险》">
                 </div>
                 <div class="animetitle"><a href="https://www.bilibili.com/bangumi/play/ss44377" target="_blank"
@@ -585,7 +585,7 @@
             </li>
             <li class="animeli">
                 <div><img class="animeimg"
-                        src="../img/kjys.webp"
+                        src="../img/kjys.png"
                         alt="《铠甲勇士》">
                 </div>
                 <div class="animetitle"><a href="https://www.iqiyi.com/v_19rrhnwuo0.html" target="_blank"
@@ -792,7 +792,7 @@
             </li>
             <li class="animeli">
                 <div><img class="animeimg"
-                        src="../img/kjys.webp"
+                        src="../img/kjys.png"
                         alt="《铠甲勇士》">
                 </div>
                 <div class="animetitle"><a href="https://www.iqiyi.com/v_19rrhnwuo0.html" target="_blank"
