--- a/CN/ani-SH.html
+++ b/CN/ani-SH.html
@@ -20,16 +20,14 @@
         <div class="headtitle" clickable="true"><a href="../index.html">漫时记</a></div>
         <ul class="headul"> <!-- 导航栏 -->
             <li class="headli"><a class="headbtn" onclick="location.href='../index.html'">首页</a></li>
-            <li class="headli"><a class="headbtn" onclick="location.href='CN_anime.html'">优秀国创</a></li>
+            <li class="headli"><a class="headbtn" onclick="location.href='../CN/CN_anime.html'">优秀国创</a></li>
             <li class="headli"><a class="headbtn" onclick="location.href='../JP/JP_anime.html'">日本动漫</a></li>
             <li class="headli"><a class="headbtn" onclick="location.href='../US/US_anime.html'">欧美动漫</a></li>
-            <li class="headli"><a class="headbtn" onclick="location.href='../KR/KR_anime.html'">韩国动漫</a></li>
         </ul>
         <!-- 搜索框 -->
         <div class="searchbox">
-            <form action="search.php" method="get">
-                <input type="text" name="search" placeholder="输入后，enter键搜索">
-            </form>
+            <input type="text" id="searchInput" placeholder="在本页内搜索……" />
+            <button id="searchButton">搜索</button>
         </div>
     </div>
     <!-- 内容 -->
@@ -40,7 +38,11 @@
             <p id="ani-sh">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上海美术电影制片厂成立于1957年4月，是中国历史悠久、片库量丰富、知识产权众多的国有动画企业，创作了《大闹天宫》、《小蝌蚪找妈妈》、《黑猫警长》、《葫芦兄弟》、《大耳朵图图》等近500部伴随了几代中国人成长的经典作品。自建厂以来，上美影制作的二维动画、水墨动画、木偶动画、剪纸动画获得了500多项国内外奖项，在国际上获得了动画“中国学派”的美誉，是经文化部认定为重点动漫企业。
             </p>
-            <p id="ani-sh-bottom">————与美同行，不负热爱————</p>
+            <div class="bottom-line" id="ani-sh">
+                <span class="ani-sh-line"></span>
+                <span class="text">与美同行，不负热爱</span>
+                <span class="ani-sh-line"></span>
+            </div>
         </div>
         <div id="ani-sh-body-right">
             <img id="ani-sh-img" src="https://www.ani-sh.com/public/assets/meiying/images/aboutUs-1.jpg" alt="上美影">
@@ -50,3 +52,8 @@
             <p><span>品牌主张：</span>与美同行，不负热爱</p>
         </div>
     </div>
+    <script src="/js/bgm-player.js"></script>
+    <script src="/js/search.js"></script>
+</body>
+</html>
+    
