--- a/CN/gm-TJ.html
+++ b/CN/gm-TJ.html
@@ -20,16 +20,14 @@
         <div class="headtitle" clickable="true"><a href="../index.html">漫时记</a></div>
         <ul class="headul"> <!-- 导航栏 -->
             <li class="headli"><a class="headbtn" onclick="location.href='../index.html'">首页</a></li>
-            <li class="headli"><a class="headbtn" onclick="location.href='CN_anime.html'">优秀国创</a></li>
+            <li class="headli"><a class="headbtn" onclick="location.href='../CN/CN_anime.html'">优秀国创</a></li>
             <li class="headli"><a class="headbtn" onclick="location.href='../JP/JP_anime.html'">日本动漫</a></li>
             <li class="headli"><a class="headbtn" onclick="location.href='../US/US_anime.html'">欧美动漫</a></li>
-            <li class="headli"><a class="headbtn" onclick="location.href='../KR/KR_anime.html'">韩国动漫</a></li>
         </ul>
         <!-- 搜索框 -->
         <div class="searchbox">
-            <form action="search.php" method="get">
-                <input type="text" name="search" placeholder="输入后，enter键搜索">
-            </form>
+            <input type="text" id="searchInput" placeholder="在本页内搜索……" />
+            <button id="searchButton">搜索</button>
         </div>
     </div>
     <!-- 内容 -->
@@ -41,6 +39,7 @@
             <p>1985年建立职工工艺美术学院 。连同学院的研究设计部和美术创作室，成为以工艺美术专业教育为主，集教学、设计、广告经营于一体的综合性工艺美术专业机构。至此《熊猫的故事》可谓绝唱。</p>
         </div>
     </div>
+    <script src="/js/bgm-player.js"></script>
+    <script src="/js/search.js"></script>
 </body>
-
 </html>
