--- a/bgm/bgm.html
+++ b/bgm/bgm.html
@@ -3,16 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>自动播放背景音乐</title>
+  <title>背景音乐 | 漫时记</title>
+  <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
+  <!-- 头部 -->
+  <div class="header">
+    <!-- logo -->
+    <div class="headerlogo"><a href="../index.html"><img src="../favicon.ico" alt="logo" height="128"
+                width="128"></a>
+    </div>
+    <!-- 标题 -->
+    <div class="headtitle" clickable="true"><a href="../index.html">漫时记</a></div>
+    <ul class="headul"> <!-- 导航栏 -->
+        <li class="headli"><a class="headbtn" onclick="location.href='../index.html'">首页</a></li>
+        <li class="headli"><a class="headbtn" onclick="location.href='../CN/CN_anime.html'">优秀国创</a></li>
+        <li class="headli"><a class="headbtn" onclick="location.href='../JP/JP_anime.html'">日本动漫</a></li>
+        <li class="headli"><a class="headbtn" onclick="location.href='../US/US_anime.html'">欧美动漫</a></li>
+    </ul>
+    <!-- 搜索框 -->
+    <div class="searchbox">
+        <input type="text" id="searchInput" placeholder="在本页内搜索……" />
+        <button id="searchButton">搜索</button>
+    </div>
+</div>
   <!-- 音频元素 -->
   <audio id="background-music" loop>
     <source src="../music/bgm.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
+  
 
-  <h1>欢迎来到我的网站！</h1>
+  <h1 style="text-align: center;color: red;">陌生人，你不应该在这里！如果你看到了这个页面说明可能出现了一些错误，请通过上方导航栏离开。</h1>
   <p>背景音乐将在页面加载时自动播放。</p>
 
   <!-- 引入 JavaScript -->
